tests/e2e/authz-server/apol/policy-ordering/policy-a.yaml
# yaml-language-server: $schema=../../../../../.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: policy-a
spec:
  deny:
  - response: >
      envoy
        .Denied(403)
        .WithBody("Unauthorized Request from Policy A")
        .Response()
